[package]
name = "amplify-c"
version = "0.15.0"
authors = ["Joey Ezechiëls <joey.ezechiels@gmail.com>"]
description = "C bindings for Amplify"

[dependencies]
libc = "0.2"
amplify = { git = "https://github.com/jjpe/amplify.git", tag = "0.15.0" }

[lib]
name = "amplify_c"
crate-type = ["cdylib", "staticlib", "rlib"]
